Update app name to かんたんサウンドアナライザー

--- a/easysound-support.html
+++ b/easysound-support.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>サポート - かんたんサウンド</title>
+    <title>サポート - かんたんサウンドアナライザー</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
@@ -40,7 +40,7 @@
 </head>
 <body>
     <h1>サポート</h1>
-    <p><strong>かんたんサウンド</strong> をご利用いただきありがとうございます。</p>
+    <p><strong>かんたんサウンドアナライザー</strong> をご利用いただきありがとうございます。</p>
 
     <h2>よくある質問</h2>
 
@@ -51,7 +51,7 @@
 
     <div class="faq-item">
         <p class="faq-q">Q. スペクトラムが表示されません。</p>
-        <p class="faq-a">マイクの権限が許可されているかご確認ください。iOS の設定 → かんたんサウンド → マイク を「オン」にしてください。権限を付与後、アプリを再起動してください。</p>
+        <p class="faq-a">マイクの権限が許可されているかご確認ください。iOS の設定 → かんたんサウンドアナライザー → マイク を「オン」にしてください。権限を付与後、アプリを再起動してください。</p>
     </div>
 
     <div class="faq-item">
@@ -66,7 +66,7 @@
 
     <div class="faq-item">
         <p class="faq-q">Q. 位置情報が記録されません。</p>
-        <p class="faq-a">iOS の設定 → かんたんサウンド → 位置情報 を「このアプリの使用中のみ許可」に設定してください。また、屋内や電波の届きにくい場所では位置情報が取得できない場合があります。</p>
+        <p class="faq-a">iOS の設定 → かんたんサウンドアナライザー → 位置情報 を「このアプリの使用中のみ許可」に設定してください。また、屋内や電波の届きにくい場所では位置情報が取得できない場合があります。</p>
     </div>
 
     <div class="faq-item">
