--- a/easysound-privacy-policy.html
+++ b/easysound-privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>プライバシーポリシー - かんたんサウンド</title>
+    <title>プライバシーポリシー - かんたんサウンドアナライザー</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
@@ -25,7 +25,7 @@
 <body>
     <h1>プライバシーポリシー</h1>
     <p class="updated">最終更新日: 2026年2月27日</p>
-    <p>「かんたんサウンド」（以下「本アプリ」）は、ユーザーのプライバシーを尊重し、個人情報の保護に努めています。</p>
+    <p>「かんたんサウンドアナライザー」（以下「本アプリ」）は、ユーザーのプライバシーを尊重し、個人情報の保護に努めています。</p>
 
     <h2>1. 収集するデータ</h2>
     <p>本アプリは以下のデータを取り扱います。</p>
